@@ -1,20 +1,23 @@
 package com.andy.customer.control;
 
 
-import com.andy.customer.entity.CustomerCreateRequest;
 import com.andy.customer.entity.Customer;
+import com.andy.customer.entity.CustomerCreateRequest;
 import com.andy.customer.entity.CustomerDto;
 import com.andy.customer.entity.CustomerMapper;
 import com.andy.customer.exception.DuplicateResourceException;
 import com.andy.customer.exception.ErrorMessages;
 import com.andy.customer.exception.ResourceNotFoundException;
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.event.Event;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
+import org.eclipse.microprofile.context.ManagedExecutor;
+import org.eclipse.microprofile.context.ThreadContext;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.locks.LockSupport;
 
 @ApplicationScoped
 public class CustomerService {
@@ -25,13 +28,24 @@ public class CustomerService {
     @Inject
     CustomerMapper customerMapper;
 
+    @Inject
+    @Created
+    Event<Customer> customerCreatedEvent;
+
+    @Inject
+    ManagedExecutor managedExecutor;
+
+    @Inject
+    ThreadContext threadContext;
+
 
     public List<CustomerDto> findAll() {
+
         return customerRepository
                 .listAll()
                 .stream()
                 .map(customerMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CustomerDto findById(UUID id) {
@@ -54,6 +68,7 @@ public class CustomerService {
 
     @Transactional
     public void create(CustomerCreateRequest createCustomerRequest) {
+
         String email = createCustomerRequest.getEmail();
         if (customerRepository.existsWithEmail(email)) {
             throw new DuplicateResourceException(ErrorMessages.EMAIL_ALREADY_TAKEN.message());
@@ -63,10 +78,23 @@ public class CustomerService {
                 createCustomerRequest.getUsername(),
                 email,
                 createCustomerRequest.getCustomerType()
-         );
+        );
+
+
+//        customerCreatedEvent.fire(customer);
+//        customerCreatedEvent.fireAsync(customer);
 
         customerRepository.persist(customer);
+        managedExecutor.execute(threadContext.contextualRunnable(this::sendNotification));
     }
+
+
+    private void sendNotification(){
+        System.out.println("Sending notification to the newly created customer...");
+        LockSupport.parkNanos(2_000_000_000L);
+        System.out.println("...done");
+    }
+
 
 
     @Transactional
